Extend Example with warning and more meta data

--- a/example/raphidoc.yml
+++ b/example/raphidoc.yml
@@ -1,5 +1,10 @@
 version: 1.0
-site_name: SE1 - Documentation
+
+title: Software Engineering 1
+subtitle: Herbstsemester 2016
+author: Raphael Zimmermann
+institute: HSR Hochschule für Technik Rapperswil
+
 pages:
    - index.md
    - sub/index.md
